--- a/WebContent/css/searchResult.css
+++ b/WebContent/css/searchResult.css
@@ -117,4 +117,146 @@ h2 {
 #openModalBtnC{
     cursor: pointer;
 }
+/* モーダルのスタイル */
+.content-regist-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.content-regist-modal .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    height: 85%;
+    border-radius: 10px;
+}
+
+.content-regist-modal .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: -10px;
+}
+
+.content-regist-modal .close:hover,
+.content-regist-modal .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.content-regist-modal .btn {
+    display: block;
+    margin: 10px 18px 10px 18px;
+    padding: 20px 60px 20px 50px;
+    width: 255px;
+    color: #ffffff;
+    background-color: #35AFDB;
+    font-size: 1.2em;
+    border-radius: 20px;
+    position: absolute;
+    left: 600px;
+}
+
+.content-regist-modal .btn:hover {
+    background-color: #35AFDB;
+}
+
+.content-regist-modal .modal-title {
+    font-size: larger;
+    text-align: center;
+    font-weight: bold;
+}
+
+.content-regist-modal input[name=content-title],
+.content-regist-modal input[name=content-title-ruby]{
+    border: 1px solid #ccc;
+    height: 3em;
+    width: 100%;
+    margin: 10px 0 10px 30px;
+    background-color: #dcdcdc;
+    padding: 20px;
+}
+
+.content-regist-modal input[name=content-title-ruby]{
+    margin-top: -5px;
+}
+
+.content-regist-modal input[name=upload] {
+    border: 1px solid #545454;
+    font-size: 0.8em;
+    margin: 30px 5px 0px 5px;
+    padding: 10px 240px 10px 10px;
+    width: 190px;
+    height: 50px;
+    color: #545454;
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.content-regist-modal #preview{
+    margin:0 40px 0 60px;
+}
+
+.content-regist-modal .review-img{
+    display: flex;
+}
+
+.content-regist-modal .modal-content .delete-button{
+    margin: -100px 10px 65px 380px;
+}
+
+/*詳細登録デーブル*/
+.content-regist-modal .detail-items{
+    width: 200px;
+    margin: 10px 0 0 0;
+    background-color: #dcdcdc;
+    padding: 7px;
+    text-align: center;
+    position: relative;
+    left: 100px;
+}
+
+.content-regist-modal input[name=detail-creator-input] ,
+.content-regist-modal select{
+    width: 160px;
+    height: 38px;
+    border: 1px solid #dcdcdc;
+    padding: 7px;
+    position: absolute;
+    left: 780px;
+    margin: -15px 0 0 0;
+}
+
+#content-regist-modal2 .true-text{
+    font-size: larger;
+    text-align: center;
+    font-weight: bold;
+}
+
+#content-regist-modal2 .modal-content{
+    width: 30%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#content-regist-modal2 .close{
+    position: absolute;
+    left: 63.5%;
+    margin-top: -8%;
+}
+
 
