--- a/WebContent/css/myPage.css
+++ b/WebContent/css/myPage.css
@@ -1,330 +1,456 @@
 /* ページ全体のスタイル */
 
 li{
-  /* リストの先頭の丸をなくす */
-  list-style: none;
-}
+    /* リストの先頭の丸をなくす */
+    list-style: none;
+  }
 
 
-/* マイページ上部分共通のスタイル */
-/* ユーザ情報全体 */
-.profile{
-  display: flex;
-  margin-top: 3%;
-  margin-left: 15%;
-  margin-left: 15%;
-}
+  /* マイページ上部分共通のスタイル */
+  /* ユーザ情報全体 */
+  .profile{
+    display: flex;
+    margin-top: 3%;
+    margin-left: 15%;
+    margin-left: 15%;
+  }
 
-/* アイコン */
-.icon{
-  height: 200px;
-  width: 200px;
-}
+  /* アイコン */
+  .icon{
+    height: 200px;
+    width: 200px;
+  }
 
-/* ユーザ名と実績 */
-.userInfo{
-  margin-top: 40px;
-  margin-bottom: 40px;
-  margin-left: 4%;
-  margin-right: 3%;
-}
+  /* ユーザ名と実績 */
+  .userInfo{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 4%;
+    margin-right: 3%;
+  }
 
-/* ユーザ名 */
-.userName{
-  font-family: sans-serif;
-  font-size: 2rem;
-  margin-bottom: 15px;
-}
+  /* ユーザ名 */
+  .userName{
+    font-family: sans-serif;
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
 
-/* 実績 */
-.achievements{
-  font-size: 1.1rem;
-}
+  /* 実績 */
+  .achievements{
+    font-size: 1.1rem;
+  }
 
-/* 自己紹介文 */
-.introduction{
-  background-color: #FFFFFF;
-  height: 150px;
-  width: 400px;
-  padding: 25px;
+  /* 自己紹介文 */
+  .introduction{
+    background-color: #FFFFFF;
+    height: 150px;
+    width: 400px;
+    padding: 25px;
 
-  /* 垂直・水平方向に真ん中に表示されるようにする */
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
+    /* 垂直・水平方向に真ん中に表示されるようにする */
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
 
-/* タブのスタイル */
-/*tabの形状*/
-#tab {
-  /* タブメニューを横に並べる */
-  display: flex;
+  /* タブのスタイル */
+  /*tabの形状*/
+  #tab {
+    /* タブメニューを横に並べる */
+    display: flex;
 
-  /* margin */
-  margin-top: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding-bottom: 15px;
-}
-
-
-#tab a{
-  /* 垂直・水平方向に真ん中に表示されるようにする */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  /* 背景 */
-  background-color: #CFCFCF;
-
-  /* 角を丸く */
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-
-  /* 高さと幅 */
-  width: 283px;
-  height: 50px;
-
-  color: #545454;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-#tab a.selected{
-  border-color: #FFFFFF;
-  background-color: #FFFFFF;
-}
-
-/* 選択されたタブのスタイル */
-
-.area {
-  border: 1px solid white;
-  /* ボーダー */
-  margin: -16px 50px 50px 50px;
-  /* マージン */
-  padding: 1em;
-  /* パディング */
-  background-color: white;
-  /* 背景色 */
-  overflow-y: scroll;
-  /* 縦スクロール */
-  height: 500px;
-  /* 高さ */
-  width: 1380px;
-  display: none;
-  /* 非表示 */
-}
-
-.area.selected {
-display: block;
-/* ブロック要素として表示 */
-}
+    /* margin */
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-bottom: 15px;
+  }
 
 
-/* selectタブのスタイル */
-.select{
-  margin: 10px;
-  height: 30px;
-  /* 高さ */
-  width: 100px;
-  /* 幅 */
-  border: 1px solid #ccc;
-  /* ボーダー */
-  border-radius: 20px;
-  /* 角丸 */
-  text-align: center;
-  /* 中央揃え */
-}
+  #tab a{
+    /* 垂直・水平方向に真ん中に表示されるようにする */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    /* 背景 */
+    background-color: #CFCFCF;
 
-/* コレクション、ウィッシュリストのスタイル */
-.myContentsList{
-  /* コンテンツを横並びにする */
-  display: flex;
-}
+    /* 角を丸く */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
-.contents{
-  /* 文字のスタイル */
-  color: #545454;
-  text-decoration: none;
+    /* 高さと幅 */
+    width: 283px;
+    height: 50px;
 
-  /* 文字を中央に配置する */
+    color: #545454;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  #tab a.selected{
+    border-color: #FFFFFF;
+    background-color: #FFFFFF;
+  }
+
+  /* 選択されたタブのスタイル */
+
+  .area {
+    border: 1px solid white;
+    /* ボーダー */
+    margin: -16px 50px 50px 50px;
+    /* マージン */
+    padding: 1em;
+    /* パディング */
+    background-color: white;
+    /* 背景色 */
+    overflow-y: scroll;
+    /* 縦スクロール */
+    height: 500px;
+    /* 高さ */
+    width: 1380px;
+    display: none;
+    /* 非表示 */
+  }
+
+  .area.selected {
   display: block;
-  text-align: center;
+  /* ブロック要素として表示 */
+  }
+
+
+  /* selectタブのスタイル */
+  .select{
+    margin: 10px;
+    height: 30px;
+    /* 高さ */
+    width: 100px;
+    /* 幅 */
+    border: 1px solid #ccc;
+    /* ボーダー */
+    border-radius: 20px;
+    /* 角丸 */
+    text-align: center;
+    /* 中央揃え */
+  }
+
+
+  /* コレクション、ウィッシュリストのスタイル */
+  .myContentsList{
+    /* コンテンツを横並びにする */
+    display: flex;
+  }
+
+  .contents{
+    /* 文字のスタイル */
+    color: #545454;
+    text-decoration: none;
+
+    /* 文字を中央に配置する */
+    display: block;
+    text-align: center;
+  }
+
+  .contentsImage{
+    margin-left: 40px;
+    margin-right: 40px;
+    height: 150px;
+    width: 135px;
+  }
+
+  /* レビュー一覧のスタイル */
+
+  .reviewBar{
+    margin: 5px 20px 5px 20px;
+    height: 244px;
+    width: 1323px;
+    border: #CFCFCF solid 2px;
+    border-radius: 10px;
+  }
+
+  .review{
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 50px;
+    display: flex;
+    align-items: center; /* 中央に配置 */
+
+  }
+
+  .reviewImage{
+    height: 200px;
+    width: 180px;
+    margin-bottom: 10px;
+  }
+
+  .reviewTime{
+    margin-left: 50px;
+    font-size: 0.8rem;
+  }
+
+  .review p {
+    margin-bottom: 180px;
+    margin-left: 30px;
+    margin-right: -90px;
+  }
+
+  .reviewTitle {
+    margin-bottom: 300px;
+    margin-left: 240px;
+    margin-top: -180px;
+  }
+
+  .reviewText{
+    margin-top: -280px;
+    margin-left: 240px;
+    max-width: 100%; /* レビューテキストの最大幅。デザインに合わせて調整してください。 */
+
+  }
+
+  /*削除ボタン------------------------------------*/
+  .review_button{
+    display: flex;
+    margin-left: 800px;
+    margin-bottom: 150px;
+    margin-top: -50px;
+  }
+
+  .update-button {
+    display: flex;
+    border: 1px solid black;
+    padding: 8px;
+    background-color: #ffffff;
+    align-items: center;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-right: 30px;
+    cursor: pointer;
+  }
+
+  .update-button img{
+    width: 20px;
+    height: 20px;
+    margin-right: 3px;
+  }
+
+  .update-button .update-text{
+    display: inline-block;
+  }
+
+  h5 {
+    margin: -153px 10px 125px 1270px;
+  }
+
+  /* ハートアイコン */
+  .heart {
+    /* 絶対位置 */
+    width: 30px;
+    /* 幅 */
+    height: 30px;
+    /* 高さ */
+    margin: 30px 10px 120px 1230px;
+    /* 左のマージン */
+  }
+
+  /* お気に入りユーザ */
+  .othericon {
+    border-radius: 100px;
+    height: 100px;
+    width: 100px;
+  }
+
+
+  .good_user{
+    border: #545454;
+    margin-right:  20px;
+    margin-left: 40px;
+    border: #CFCFCF solid 2px;
+    border-radius: 10px;
+    height: 120px;
+    width: 600px;
+  }
+
+  .good_user a{
+    text-decoration: none;
+  }
+
+  .user {
+    display: flex;
+    align-items: center; /* 中央に配置 */
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+
+  .user h3 {
+    color: black;
+    margin-left: 50px;
+    font-size: 1.5em;
+  }
+
+
+  /* チャット履歴のスタイル */
+  .chat-history {
+    display: flex;
+    margin: 5px 20px 5px 20px;
+    color: #545454;
+    text-decoration: none;
+    border: #CFCFCF solid 2px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+  .chat-icon{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin-left: 20px;
+  }
+  .chat{
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+  .chat h3{
+    color: black;
+    margin-left: 50px;
+    font-size: 1.5em;
+  }
+
+  .talk {
+    margin-left: 150px;
+  }
+
+  .check-count {
+    border: #35afdb;
+    border-radius: 100px;
+    background-color: #35afdb;
+    color: #ffffff;
+    padding: 20px 27px;
+    margin-left: 600px;
+  }
+
+/*モーダル*/
+.review-edit-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
-.contentsImage{
-  margin-left: 40px;
-  margin-right: 40px;
-  height: 150px;
-  width: 135px;
+.review-edit-modal .modal-content {
+    background-color: #fefefe;
+    margin: 2% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    height: 80%;
+    border-radius: 10px;
 }
 
-/* レビュー一覧のスタイル */
-
-.reviewBar{
-  margin: 5px 20px 5px 20px;
-  height: 244px;
-  width: 1323px;
-  border: #CFCFCF solid 2px;
-  border-radius: 10px;
+.review-edit-modal .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: -10px;
 }
 
-.review{
-  margin-top: 20px;
-  margin-left: 30px;
-  margin-right: 50px;
-  display: flex;
-  align-items: center; /* 中央に配置 */
-
+.review-edit-modal .close:hover,
+.review-edit-modal .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.reviewImage{
-  height: 200px;
-  width: 180px;
-  margin-bottom: 10px;
+.review-edit-modal .btn {
+    display: block;
+    margin: 10px 18px 10px 18px;
+    padding: 20px 60px 20px 50px;
+    width: 255px;
+    color: #ffffff;
+    background-color: #35AFDB;
+    font-size: 1.2em;
+    border-radius: 20px;
+    position: absolute;
+    left: 600px;
 }
 
-.reviewTime{
-  margin-left: 50px;
-  font-size: 0.8rem;
+.review-edit-modal .btn:hover {
+    background-color: #35AFDB;
 }
 
-.review p {
-  margin-bottom: 180px;
-  margin-left: 30px;
-  margin-right: -90px;
+.review-edit-modal .modal-title {
+    font-size: larger;
+    text-align: center;
+    font-weight: bold;
 }
 
-.reviewTitle {
-  margin-bottom: 300px;
-  margin-left: 240px;
-  margin-top: -180px;
+.review-edit-modal input[name=review-title]{
+    border: 1px solid #ccc;
+    height: 3em;
+    width: 100%;
+    margin: 10px 0 10px 30px;
+    background-color: #dcdcdc;
+    padding: 20px;
 }
 
-.reviewText{
-  margin-top: -280px;
-  margin-left: 240px;
-  max-width: 100%; /* レビューテキストの最大幅。デザインに合わせて調整してください。 */
-
+.review-edit-modal input[name=upload] {
+    border: 1px solid #545454;
+    font-size: 0.8em;
+    margin: 30px 5px 0px 5px;
+    padding: 10px 240px 10px 10px;
+    width: 190px;
+    height: 50px;
+    color: #545454;
+    background-color: #ffffff;
+    border-radius: 10px;
 }
 
-/*削除ボタン------------------------------------*/
-.review_button{
-  display: flex;
-  margin-left: 800px;
-  margin-bottom: 150px;
-  margin-top: -50px;
+.review-edit-modal #review-detail{
+    font-family: sans-serif;
+    width: 100%;
+    height: 150px;
+    border: 1px solid #ccc;
+    background-color: #dcdcdc;
+    padding: 20px;
+    margin: 10px 0 10px 30px;
 }
 
-.update-button {
-  display: flex;
-  border: 1px solid black;
-  padding: 8px;
-  background-color: #ffffff;
-  align-items: center;
-  border-radius: 10px;
-  margin-top: 20px;
-  margin-right: 30px;
+.review-edit-modal #preview{
+    margin:0 40px 0 60px;
 }
 
-.update-button img{
-  width: 20px;
-  height: 20px;
-  margin-right: 3px;
+.review-edit-modal .review-img{
+    display: flex;
 }
 
-.update-button .update-text{
-  display: inline-block;
+.review-edit-modal .modal-content .delete-button{
+    margin: -100px 10px 65px 380px;
 }
 
-h5 {
-  margin: -153px 10px 125px 1270px;
+.review-edit-modal .true-text{
+    font-size: larger;
+    text-align: center;
+    font-weight: bold;
 }
 
-/* ハートアイコン */
-.heart {
-  /* 絶対位置 */
-  width: 30px;
-  /* 幅 */
-  height: 30px;
-  /* 高さ */
-  margin: 30px 10px 120px 1230px;
-  /* 左のマージン */
+#review-edit-modal2 .modal-content{
+    width: 30%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* お気に入りユーザ */
-.othericon {
-  border-radius: 100px;
-  height: 100px;
-  width: 100px;
-}
-
-
-.good_user{
-  border: #545454;
-  margin-right:  20px;
-  margin-left: 40px;
-  border: #CFCFCF solid 2px;
-  border-radius: 10px;
-  height: 120px;
-  width: 600px;
-}
-
-.good_user a{
-  text-decoration: none;
-}
-
-.user {
-  display: flex;
-  align-items: center; /* 中央に配置 */
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
-.user h3 {
-  color: black;
-  margin-left: 50px;
-  font-size: 1.5em;
-}
-
-
-/* チャット履歴のスタイル */
-.chat-history {
-  display: flex;
-  margin: 5px 20px 5px 20px;
-  color: #545454;
-  text-decoration: none;
-  border: #CFCFCF solid 2px;
-  border-radius: 10px;
-  padding: 10px;
-}
-.chat-icon{
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  margin-left: 20px;
-}
-.chat{
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
-.chat h3{
-  color: black;
-  margin-left: 50px;
-  font-size: 1.5em;
-}
-
-.talk {
-  margin-left: 150px;
-}
-
-.check-count {
-  border: #35afdb;
-  border-radius: 100px;
-  background-color: #35afdb;
-  color: #ffffff;
-  padding: 20px 27px;
-  margin-left: 600px;
+#review-edit-modal2 .close{
+    position: absolute;
+    left: 63.5%;
+    margin-top: -8%;
 }
