--- a/WebContent/css/otherMyPage.css
+++ b/WebContent/css/otherMyPage.css
@@ -1,1 +1,502 @@
 @charset "UTF-8";
+
+/* 他ユーザのマイページ上部分共通のCSS */
+li{
+  /* リストの先頭の丸をなくす */
+  list-style: none;
+}
+
+
+/* ユーザ情報全体 */
+.profile{
+  display: flex;
+  margin-top: 3%;
+  margin-left: 15%;
+  margin-left: 15%;
+}
+
+/* アイコン */
+.icon{
+  height: 200px;
+  width: 200px;
+}
+
+/* ユーザ名と実績 */
+.userInfo{
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+/* ユーザ名 */
+.userName{
+  font-family: sans-serif;
+  font-size: 2rem;
+  margin-bottom: 5px;
+}
+
+/* 実績 */
+.achievements{
+  font-size: 1.1rem;
+}
+
+/* 自己紹介文 */
+.introduction{
+  background-color: #FFFFFF;
+  height: 150px;
+  width: 400px;
+  padding: 25px;
+
+  /* 垂直・水平方向に真ん中に表示されるようにする */
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+
+/* ボタンのためのCSS */
+.bt{
+  display: flex;
+  width: 260px;
+  height: 45px;
+  margin: 10px;
+  padding: 5px 20px 0px 20px;
+  border: none;
+  border-radius: 10px;
+  color: #ffffff;
+  background-color: #35AFDB;
+  align-items: center;
+  font-size: 1em;
+  border-radius: 10px;
+}
+
+.bt img{
+  width: 30px;
+  height: 30px;
+  margin-right: 7px;
+  margin-bottom: 5px;
+}
+
+.bt .bt-text{
+  display: inline-block;
+  margin-left: 4px;
+}
+
+
+/* タブのスタイル */
+/*tabの形状*/
+#tab {
+  /* タブメニューを横に並べる */
+  display: flex;
+
+  /* margin */
+  margin-top: 40px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+#tab li{
+  /* リストの先頭の丸をなくす */
+  list-style: none;
+}
+
+#tab a{
+  /* 垂直・水平方向に真ん中に表示されるようにする */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* 背景 */
+  background-color: #CFCFCF;
+
+  /* 角を丸く */
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  /* 高さと幅 */
+  width: 707px;
+  height: 50px;
+
+  color: #545454;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#tab a.selected{
+  border-color: #FFFFFF;
+  background-color: #FFFFFF;
+}
+
+/* 選択されたタブのスタイル */
+
+.area {
+  border: 1px solid white;
+  /* ボーダー */
+  margin: -16px 50px 50px 50px;
+  /* マージン */
+  padding: 1em;
+  /* パディング */
+  background-color: white;
+  /* 背景色 */
+  overflow-y: scroll;
+  /* 縦スクロール */
+  height: 500px;
+  /* 高さ */
+  width: 1380px;
+  display: none;
+  /* 非表示 */
+}
+
+.area.selected {
+display: block;
+/* ブロック要素として表示 */
+}
+
+/* selectタブのスタイル */
+.select{
+  margin: 10px;
+  height: 30px;
+  /* 高さ */
+  width: 100px;
+  /* 幅 */
+  border: 1px solid #ccc;
+  /* ボーダー */
+  border-radius: 20px;
+  /* 角丸 */
+  text-align: center;
+  /* 中央揃え */
+}
+
+/* コレクション、ウィッシュリストのスタイル */
+  .myContentsList{
+    /* コンテンツを横並びにする */
+    display: flex;
+  }
+
+  .contents{
+    /* 文字のスタイル */
+    color: #545454;
+    text-decoration: none;
+
+    /* 文字を中央に配置する */
+    display: block;
+    text-align: center;
+  }
+
+  .contentsImage{
+    margin-left: 40px;
+    margin-right: 40px;
+    height: 150px;
+    width: 135px;
+  }
+
+  /* レビュー一覧のスタイル */
+
+  .reviewBar{
+    margin: 5px 20px 5px 20px;
+    height: 244px;
+    width: 1323px;
+    border: #CFCFCF solid 2px;
+    border-radius: 10px;
+  }
+
+  .review{
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 50px;
+    display: flex;
+    align-items: center; /* 中央に配置 */
+
+  }
+
+  .reviewImage{
+    height: 200px;
+    width: 180px;
+    margin-bottom: 10px;
+  }
+
+  .reviewTime{
+    margin-left: 50px;
+    font-size: 0.8rem;
+  }
+
+  .review p {
+    margin-bottom: 180px;
+    margin-left: 30px;
+    margin-right: -90px;
+  }
+
+  .reviewTitle {
+    margin-bottom: 300px;
+    margin-left: 240px;
+    margin-top: -180px;
+  }
+
+  .reviewText{
+    margin-top: -280px;
+    margin-left: 240px;
+    max-width: 100%; /* レビューテキストの最大幅。デザインに合わせて調整してください。 */
+
+  }
+
+/*削除ボタン------------------------------------*/
+.review_button{
+  display: flex;
+  margin-left: 800px;
+  margin-bottom: 150px;
+  margin-top: -50px;
+}
+
+.update-button {
+  display: flex;
+  border: 1px solid black;
+  padding: 8px;
+  background-color: #ffffff;
+  align-items: center;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-right: 30px;
+}
+
+.update-button img{
+  width: 20px;
+  height: 20px;
+  margin-right: 3px;
+}
+
+.update-button .update-text{
+  display: inline-block;
+}
+
+h5 {
+  margin: -153px 10px 125px 1270px;
+}
+
+/* ハートアイコン */
+.heart {
+  /* 絶対位置 */
+  width: 30px;
+  /* 幅 */
+  height: 30px;
+  /* 高さ */
+  margin: 30px 10px 120px 1230px;
+  /* 左のマージン */
+}
+
+
+/* チャットモーダルのスタイル */
+/* モーダルのスタイル */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  height: 85%;
+  border-radius: 13px;
+  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 50px;
+  margin-bottom: 125px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn {
+  display: block;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+
+
+/* body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+} */
+
+#chat-container {
+  background-color: #ffffff;
+  width: 100%;
+  max-width: 600px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 75vh;
+}
+
+.messages {
+  flex: 1;
+  height: 100px;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #e6e6e6;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.input-area {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid #cccccc;
+  background-color: #f9f9f9;
+}
+
+.input-area input[type="text"] {
+  flex: 1;
+  height: 40px;
+  width: 250px;
+  padding: 5px;
+  background-color: #e6e6e6;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.chat-submit {
+  height: 40px;
+  width: 80px;
+  border: none;
+  background-color: #35AFDB;
+  color: white;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.chat-submit:hover {
+  background-color: #CFCFCF;
+  color: #545454;
+}
+
+/* 画像アップロードボタン */
+.button0 {
+  margin-right: 8px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#file-button {
+  display: none;
+}
+
+.point{
+  height: 30px;
+  width: 30px;
+}
+
+.sent-message {
+  align-self: flex-end;
+}
+
+.received-message {
+  align-self: flex-start;
+}
+
+.sent-message .message-time {
+  font-size: 0.8em;
+  color: #888;
+}
+
+.received-message .message-time {
+  font-size: 0.8em;
+  color: #888;
+}
+
+.sent-message .message-content {
+  background-color: #54A3BF;
+  color: #FFFFFF;
+  padding: 10px 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 5px 0 10px 0;
+  max-width: 60%;
+  word-wrap: break-word;
+}
+
+.received-message .message-content {
+  background-color: #ffffff;
+  color: #545454;
+  padding: 10px 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 5px 0 10px 0;
+  max-width: 60%;
+  word-wrap: break-word;
+}
+
+
+.system-message {
+  background-color:  #CEE9EF;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin: 10px 0;
+  align-self: center;
+  max-width: 60%;
+  word-wrap: break-word;
+  text-align: center;
+}
+.user-info{
+  display: flex;
+}
+
+.chat-icon{
+  margin-bottom: 12px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background:transparent;
+}
+
+.chat-name{
+  display: block;
+  margin: 10px 5px 5px 30px;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.chat-icon-button{
+	background:transparent;
+}
+
