--- a/WebContent/css/searchResult.css
+++ b/WebContent/css/searchResult.css
@@ -28,10 +28,7 @@ h2 {
 
 .table {
     position:relative;
-    left:50%;
-    transform: translate(-50%);
-    width:100%;
-    height: 600px;
+    padding: 10px 50px 30px 50px;
     background-color: #DCDCDC;
 }
 
@@ -43,6 +40,11 @@ h2 {
     margin: 20px 0;
     font-size: 18px;
     text-align: center;
+}
+
+.result{
+	margin-top: 30px;
+	margin-bottom: -60px;
 }
 
 .result-item {
