--- a/WebContent/css/postmodal.css
+++ b/WebContent/css/postmodal.css
@@ -73,10 +73,10 @@
 .ppost{
   text-align: center;
   font-family: "Yu Gothic", "游ゴシック体", YuGothic, "游ゴシック Medium", "メイリオ", Meiryo, sans-serif; /* ゴシック体のフォントを優先的に指定 */
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: bold; /* 太くする */
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 5px;
+  margin-left: 6px;
 
 }
 .modalhed{
@@ -86,7 +86,7 @@
 
 input[name=submit] {
   border: none;
-  margin: 15px 30px 20px 30px;
+  margin: 10px 30px 20px 30px;
   padding: 40px 30px 40px 30px;
   width: 400px;
   color: #ffffff;
@@ -112,7 +112,7 @@ input[name=submit3] {
 
 input[name=submit1] {
   border: none;
-  margin: 10px 20px 10px 20px;
+  margin: 0px 20px 10px 20px;
   padding: 10px 20px 10px 20px;
   width: 230px;
   color: #ffffff;
@@ -134,16 +134,7 @@ input[name=submit5] {
   border-radius: 10px; /*ボタンの角を丸くする*/
 }
 
-input[name=interestBtn1] {
-  border: none;
-  margin: 10px 20px 10px 20px;
-  padding: 10px 20px 10px 20px;
-  width: 230px;
-  color: #ffffff;
-  background-color: #35AFDB;
-  font-size: 1.2em;
-  border-radius: 10px; /*ボタンの角を丸くする*/
-}
+
 
 input[name=interestBtn2] {
   text-align: center;
@@ -162,30 +153,34 @@ input[name=interestBtn2] {
 
 /* テキスト入力欄 */
 input[name=title] {
-  border: 1px solid #ccc;
-  height: 5em;
-  width: 38em;
-  margin: 3px 5px;
-  background-color: #dcdcdc;
-  /*border-radius: 10px; /*四角の角を丸くする*/
+ border: 1px solid #dcdcdc;
+    height: 4em;
+    width: 37em;
+    margin: 3px 5px;
+    background-color: #dcdcdc;
 
 }
 
 .textbox{
   border: 1px solid #ccc;
-  height: 20em;
-  width: 38em;
-  margin: 3px 5px;
-  background-color: #dcdcdc;
-  /*border-radius: 10px; /*四角の角を丸くする*/
+    height: 17.5em;
+    width: 31.5em;
+    margin: 3px 5px;
+    background-color: #dcdcdc;
 }
 .textbox1{
   border: 1px solid #ccc;
   height: 3em;
-  width: 38em;
+  width: 31em;
   margin: 3px 5px;
   background-color: #dcdcdc;
   /*border-radius: 10px; /*四角の角を丸くする*/
+}
+
+textarea{
+	font-family:san-serif;
+	font-size: 15px;
+	padding: 10px;
 }
 
 .modaltitle{
@@ -203,33 +198,26 @@ margin: 3px 5px;
 
 /* ボックス */
 .box1 {
-  padding: 0.5em 1px;
-  margin: 5px 40px;
+  padding: 10px;
+  margin: 5px 20px;
   font-weight: bold;
   border: solid 3px #545454;
-}
-.box1 p {
-  margin: 0;
-  padding: 0;
+  width:510px;
+  height:350px;
+  text-align:left;
 }
 
 .box2 {
-  padding: 0.5em 1px;
   margin: 5px 40px;
-  font-weight: bold;
   border: solid 3px #545454;
-}
-.box1 p {
-  margin: 0;
-  padding: 0;
 }
 
 /* タブ */
 #tabcontrol a {
   margin-top: 0px;
-  line-height: 4em;
+  line-height: 2.5em;
   height: 20px;
-  width: 220px;
+  width: 232px;
   display: inline-block;
   /* インラインブロック化 */
   border-width: 1px 1px 0px 1px;
@@ -239,18 +227,16 @@ margin: 3px 5px;
   /* 枠線の種類：実線 */
   border-color: white;
   /* 枠線の色：黒色 */
-  border-radius: 0px 0px 0px 0px;
-  /* 枠線の左上角と右上角だけを丸く */
-  padding: 0px 30px 30px 0px;
+  padding: 10px 30px 30px 0px;
   /* 内側の余白 */
   text-decoration: none;
   /* リンクの下線を消す */
-  color: black;
+  color: #545454;
+  font-size:18px;
+  font-weight:bold;
   /* 文字色：黒色 */
-  background-color: gray;
+  background-color: #CFCFCF;
   /* 背景色：白色 */
-  font-weight: bold;
-  /* 太字 */
   position: relative;
   /* JavaScriptでz-indexを調整するために必要 */
 }
@@ -269,7 +255,7 @@ margin: 3px 5px;
 .area {
   border: 1px solid white;
   /* 枠線：黒色の実線を1pxの太さで引く */
-  margin: -16px 50px 0px 50px;
+  margin: -16px 10px 0px 10px;
   /* 上側にあるタブと1pxだけ重ねるために「-1px」を指定 */
   padding: 5px;
   /* 内側の余白量 */
@@ -281,7 +267,7 @@ margin: 3px 5px;
   /* 重なり順序を「最も背面」にするため */
   overflow: scroll;
   height: 320px;
-  width: 450px;
+  width: 500px;
   display: none;
   margin-top: 2px;
 }
@@ -293,21 +279,51 @@ a[href="#tabpage2"] {
 }
 
 .contents {
- /*display: flex;*/
   border: 1px solid #545454;
   border-radius: 10px;
-  align-items: center;
-  /* 中央に配置 */
   gap: 5px;
-  margin: 20px 40px 0px 0px;
-  padding: 10px;
-
-
-}
-.title3{
+  margin: 10px;
+  padding: 10px 20px 3px 20px;
+  height: 100px;
+  width: 430px;
   text-align: left;
 }
-.maintext{
-  margin: 0;
+
+
+/*  気になる！ボタンのスタイル */
+#interestBtn{
+	  text-align: center;
+	  border: none;
+	  padding: 10px;
+	  color: #ffffff;
+	  font-size: 0.8em;
+	  border-radius: 20px; /*ボタンの角を丸くする*/
+	  width: 120px;
+	  height: 35px;
+	  margin-left: 70%;
 }
 
+.interestBtn1{
+  border: none;
+  margin: 10px 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
+  width: 230px;
+  color: #545454;
+  font-size: 1.2em;
+  font-weight: bold; /* 太くする */
+  border-radius: 10px; /*ボタンの角を丸くする*/
+}
+
+/* 受け取り画面のスタイル */
+.receive-title{
+	backgraound: transparent;
+	width:33rem;
+	height:1rem;
+	margin:20px;
+}
+.receive-recommend{
+	backgraound: transparent;
+	width:33rem;
+	height:60rem;
+	margin-left:20px;
+}
