--- a/WebContent/css/contentsDetail.css
+++ b/WebContent/css/contentsDetail.css
@@ -253,8 +253,9 @@ li{
     padding: 20px;
     border: 1px solid #888;
     width: 40%;
-    height: 80%;
+    height: 90%;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
 .modal-review-regist .close {
