--- a/WebContent/css/searchResult.css
+++ b/WebContent/css/searchResult.css
@@ -139,6 +139,7 @@ a {
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+    margin-top: -30px;
 }
 
 .content-regist-modal .modal-content {
