--- a/WebContent/css/home.css
+++ b/WebContent/css/home.css
@@ -5,6 +5,8 @@ main {
     flex-direction: row; /* 横並び */
     justify-content: space-around; /* 中央に配置 */
     align-items: center; /* 中央に配置 */
+    margin-right:50px;
+    margin-left:50px;
 }
 
 
@@ -14,6 +16,9 @@ main {
     margin-top: 30px;
     padding: 20px;
     margin-bottom: 20px;
+
+    width:600px;
+    height:500px;
 }
 
 .ranking h2 {
@@ -26,7 +31,6 @@ main {
 .ranking h2 {
     color: #ffffff;
     font-size: 30px;
-    margin-bottom: 10px;
     margin-left: 10px;
 }
 
@@ -44,6 +48,9 @@ h5 {
     margin: -146px 10px 125px 455px;
 }
 
+button{
+	background-color:transparent;
+}
 
 .ranking .ok {
     width: 40px;
